[ios] Correct autoresizingMasks in launch screen incognito blocker.

Bug: 877195
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I6b94acbe327886c90b640b149099db62c17c7719
Reviewed-on: https://chromium-review.googlesource.com/1188609
Commit-Queue: Rohit Rao <rohitrao@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585929}
Former-commit-id: 8e9edd108371d008b35f61ee7cac0851b53ef769